# bernt

./: .gitignore  Cargo.toml  LICENSE  Makefile  perftree.sh  rust-toolchain.toml
.cargo/: config.toml
bernt/: Cargo.toml
bernt-datagen/: Cargo.toml
bernt-datagen/src/: main.rs
bernt-eval/: Cargo.toml
bernt-movegen/: Cargo.toml
bernt-movegen/src/: king.rs  knight.rs  lib.rs  main.rs  pawn.rs  perft.rs  util.rs
bernt-movegen/src/sliding/: magic.rs  mod.rs
bernt-position/: Cargo.toml
bernt-position/src/: bitboard.rs  fen.rs  lib.rs  piece.rs  stack.rs  zobrist.rs
bernt-search/: Cargo.toml
bernt-search/src/: lib.rs  ordering.rs  timecontrol.rs  tt.rs
bernt-search/src/eval/: mod.rs  pst.rs
bernt-test/: Cargo.toml
bernt-test/src/: main.rs  movegen.rs
bernt-tuning/: Cargo.toml
bernt-tuning/src/: main.rs  params.rs
bernt/src/: bench.rs  main.rs  position.rs  thread.rs  zobrist.rs
bernt/src/movegen/: king.rs  mod.rs
bernt/src/movegen/sliding/: mod.rs
bernt/src/search/: eval.rs  mod.rs  ordering.rs
datagen/: Cargo.toml
datagen/src/: datagen.rs  main.rs
src/: bench.rs  bitboard.rs  lib.rs  main.rs  marlinformat.rs  perft.rs  position.rs  uci.rs  zobrist.rs
src/datagen/: marlinformat.rs  mod.rs
src/movegen/: bitboard.rs  king.rs  knight.rs  mod.rs  ordering.rs  pawn.rs  util.rs
src/movegen/sliding/: magic.rs  mod.rs
src/position/: fen.rs  mod.rs  piece.rs  tt.rs
src/search/: consts.rs  eval.rs  mod.rs  ordering.rs  qsearch.rs  timecontrol.rs  timeman.rs  tt.rs
src/search/eval/: mod.rs  pst.rs
src/zobrist/: mod.rs  rng.rs
tests/: perft.rs
