[package]
name = "bernt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.14.0"
chrono = "0.4.31"
fastrand = "2.0.1"

[profile.release]
lto = "fat"
strip = true

[profile.test]
opt-level = 3
